# dev_wondertrader

./: CMakeLists.txt  ParserQTS.7z  README.md  WonderTrader.sln
CTPLoader/: CMakeLists.txt  CTPLoader.vcxproj
CTPOptLoader/: CMakeLists.txt  CTPOptLoader.cpp  CTPOptLoader.vcxproj  TraderSpi.cpp
Includes/: CtaStrategyDefs.h  ExecuteDefs.h  IBtDtReader.h  ICtaStraCtx.h  IDataManager.h  IDataReader.h  IHftStraCtx.h  IRdmDtReader.h  ISelStraCtx.h  LoaderDef.hpp  WTSDataDef.hpp  WTSTypes.h  WTSVersion.h
LoaderRunner/: CMakeLists.txt  LoaderRunner.cpp
MiniLoader/: CMakeLists.txt  MiniLoader.cpp  MiniLoader.vcxproj  TraderSpi.cpp
ParserAMA/: ParserAMA.cpp  ParserAMA.h  ParserAMA.vcxproj  ParserAMA.vcxproj.filters  mdparsers.yaml
ParserAresClt/: ParserAres.cpp  ParserAres.h  ParserAres.vcxproj  ParserAres.vcxproj.filters
ParserCTPMini/: ParserCTPMini.cpp
ParserCTPOpt/: ParserCTPOpt.cpp
ParserFemas/: ParserFemas.cpp
ParserInsight/: CMakeLists.txt  ParserInsight - 副本.cpp  ParserInsight -ByID.cpp  ParserInsight.cpp  ParserInsight.h  ParserInsight.vcxproj  ParserInsight.vcxproj.filters  mdparsers.yaml
ParserOES/: CMakeLists.txt  ParserOES.cpp  ParserOES.vcxproj  ParserOES.vcxproj.filters
ParserQTS/: GTAQTSApi.lib  ParserQTS.cpp  ParserQTS.h  ParserQTS.vcxproj  ParserQTS.vcxproj.filters
ParserShengLi/: ParserShengLi.cpp  ParserShengLi.h  ParserShengLi.vcxproj  ParserShengLi.vcxproj.filters  config.yaml  盛立API使用.docx  盛立FPGA测试环境接入方式.txt
ParserShengLi/参考/: CMakeLists.txt  ParserShengLi.cpp  ParserShengLi.filters  ParserShengLi.h  ParserShengLi.vcxproj  ParserShengLi.vcxproj.filters
ParserTDF/: CMakeLists.txt  ParserTDF.cpp  ParserTDF.h  ParserTDF.vcxproj  ParserTDF.vcxproj.filters  TDFAPI30.lib  config.yaml
ParserUDP/: ParserUDP.cpp
ParserXTP/: ParserXTP.cpp
ParserXeleSkt/: ParserXeleSkt.cpp
QuoteFactory/: CMakeLists.txt  main.cpp
Share/: CodeHelper.hpp  DLLHelper.hpp  Share.vcxproj  Share.vcxproj.filters  TimeUtils.hpp  charconv.hpp
TestDtPorter/: dtcfg.yaml  main.cpp  mdparsers.yaml  tdtraders.yaml
TestParser/: config.insight.yaml  config.yaml  main.cpp
TestTrader/: main.cpp
TestUnits/: CMakeLists.txt  test_codehelper.cpp  test_utils.cpp
TraderATP/: TraderATP.cpp  TraderATP.h  TraderATP.vcxproj  TraderATP.vcxproj.filters
TraderAresClt/: TraderAresClt.cpp  TraderAresClt.h  TraderAresClt.vcxproj  TraderAresClt.vcxproj.filters
TraderCTP/: TraderCTP.cpp
TraderCTPMini/: TraderCTPMini.cpp
TraderCTPOpt/: TraderCTPOpt.cpp
TraderDumper/: CMakeLists.txt  Dumper.cpp  Dumper.h  TraderAdapter.cpp  TraderAdapter.h  TraderDumper.cpp  TraderDumper.h  TraderDumper.vcxproj  TraderDumper.vcxproj.filters  config.yaml
TraderFemas/: TraderFemas.cpp
TraderMAOpt/: CMakeLists.txt  TraderMAOpt.cpp  TraderMAOpt.h  TraderMAOpt.vcxproj  TraderMAOpt.vcxproj.filters
TraderMocker/: TraderMocker.cpp
TraderOES/: CMakeLists.txt  TraderOES.cpp  TraderOES.h  TraderOES.vcxproj  TraderOES.vcxproj.filters
TraderXTP/: TraderXTP.cpp  TraderXTP.h
TraderXTPXAlgo/: TraderXTPXAlgo.cpp  TraderXTPXAlgo.h  TraderXTPXAlgo.vcxproj  TraderXTPXAlgo.vcxproj.filters
TraderYD/: TraderYD.cpp
WTSUtils/: WTSCfgLoader.cpp  WTSCfgLoader.h
WtBtCore/: CtaMocker.cpp  CtaMocker.h  ExecMocker.cpp  ExecMocker.h  HftMocker.cpp  HftMocker.h  HisDataMgr.cpp  HisDataMgr.h  HisDataReplayer.cpp  HisDataReplayer.h  MatchEngine.cpp  SelMocker.cpp  SelMocker.h  UftMocker.cpp  UftMocker.h
WtBtPorter/: ExpCtaMocker.cpp  ExpCtaMocker.h  ExpHftMocker.cpp  ExpSelMocker.cpp  ExpSelMocker.h  WtBtPorter.cpp  WtBtPorter.h  WtBtRunner.cpp  WtBtRunner.h
WtBtRunner/: WtBtRunner.cpp
WtCore/: ActionPolicyMgr.cpp  CtaStraBaseCtx.cpp  CtaStraBaseCtx.h  CtaStraContext.cpp  CtaStraContext.h  CtaStrategyMgr.cpp  EventNotifier.h  HftStraBaseCtx.cpp  HftStraBaseCtx.h  HftStraContext.cpp  HftStraContext.h  HftStrategyMgr.cpp  IExecCommand.h  ITrdNotifySink.h  ParserAdapter.cpp  SelStraBaseCtx.cpp  SelStraBaseCtx.h  SelStraContext.cpp  SelStraContext.h  SelStrategyMgr.cpp  TraderAdapter.cpp  TraderAdapter.h  WtArbiExecuter.cpp  WtArbiExecuter.h  WtCore.vcxproj  WtCore.vcxproj.filters  WtCtaEngine.cpp  WtCtaEngine.h  WtCtaTicker.cpp  WtDiffExecuter.cpp  WtDiffExecuter.h  WtDistExecuter.cpp  WtDtMgr.cpp  WtDtMgr.h  WtEngine.cpp  WtEngine.h  WtExecMgr.cpp  WtExecMgr.h  WtExecuterFactory.cpp  WtExecuterFactory.h  (+11 more)
WtCtaStraFact/: WtStraDualThrust.cpp  WtStraDualThrust.h
WtDataStorage/: WtBtDtReader.cpp  WtBtDtReader.h  WtDataReader.cpp  WtDataReader.h  (+4 more)
(+246 files in other folders)
