
#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

#2. 确定工程名
PROJECT(ParserShengLi LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(SRC  
	${PROJECT_SOURCE_DIR}/ParserShengLi.cpp
	${PROJECT_SOURCE_DIR}/ParserShengLi.h
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

INCLUDE_DIRECTORIES(${INCS})
LINK_DIRECTORIES(${LNKS})
link_directories("${PROJECT_SOURCE_DIR}/../API/ShengLiFPGA_API_SZE3.2_SSE4.3_25436/linux")

ADD_LIBRARY(ParserShengLi SHARED ${SRC})

IF(MSVC)
	SET(LIBS
		ws2_32
	)
ELSE(GNUCC)
	IF (WIN32)
		SET(LIBS
			boost_thread
			ws2_32
		)
	ELSE(UNIX)
		SET(LIBS
			boost_thread
		)
	ENDIF()
ENDIF()

file(GLOB_RECURSE LINK_SO "${PROJECT_SOURCE_DIR}/../API/ShengLiFPGA_API_SZE3.2_SSE4.3_25436/linux/*.so")
TARGET_LINK_LIBRARIES(ParserShengLi ${LIBS} ${LINK_SO})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(ParserShengLi PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

